# sdd-bench

./: .gitignore  CLAUDE.md  LICENSE  NOTICE.md  PARTY-TRACK-BRIEF.md  PROJECT-BRIEF.md  README.md
analysis/: README.md  SCORING-RESUME-NOTE.md  findings-1-t1-to-t4vague.md  findings-2-t1-to-t4rich.md  handoff.md
analysis/findings/: output-vs-artifacts-axis.md
analysis/party-findings/: 00-detection-saturation.md  01-pv0.2-pilot-p6.md  02-pv0.3-planted-truth.md  03-pv0.4-full-suite.md  README.md
analysis/t1-postal-validator/: README.md  blind-pass-audit.md  feature-matrix.md  scoring-matrix.md
analysis/t2-library-loans/: README.md  blind-label-map.md  blind-pass-audit.md  blind-rater-prompt.md  (+2 more)
harness/: evaluation-prompt.md  operator-runbook.md  pm-persona-calibration-set.md  pm-persona-calibration-transcript.md  pm-persona-v1.md  scoring-prompt-code-task.md  scoring-prompt.md  scoring-rubric-changelog.md  scoring-rubric.md  t2-kickoff-prompt.md  v0.4-rich-kickoff-prompt.md
tasks/t1-postal-validator/starter/: pyproject.toml
tasks/t1-postal-validator/starter/tests/: test_cli.py  test_core.py
tasks/t2-library-loans/starter/: README.md  pyproject.toml
tasks/t2-library-loans/starter/app/: config.py  database.py  deps.py  errors.py  exceptions.py  main.py  models.py  pagination.py  repository.py  schemas.py  seed.py  services.py
tasks/t2-library-loans/starter/app/routers/: books.py  members.py
tasks/t2-library-loans/starter/tests/: conftest.py  test_books.py  test_loans.py  test_members.py
tasks/t3-csv-openapi/starter/: pyproject.toml
tasks/t3-csv-openapi/starter/tests/: test_imports.py
(+617 files in other folders)
