[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "library-api"
version = "0.1.0"
description = "Sample lending-library API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "pydantic>=2.6",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools]
packages = ["app", "app.routers"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
